nebula-logger/core/main/log-management/objects/LogEntry__c/fields/ApexCodeSnippet__c.field-meta.xml
<CustomField>
    <fullName>ApexCodeSnippet__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>A JSON snippet of the Apex class&apos;s code that generated the log entry</inlineHelpText>
    <label>Apex Code Snippet</label>
    <!-- TODO finalize length needed -->
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>