nebula-logger/core/main/log-management/objects/LogEntry__c/fields/ExceptionApexClassSnippet__c.field-meta.xml
<CustomField>
    <fullName>ExceptionApexClassSnippet__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>A JSON snippet of the Apex class&apos;s code that threw the exception</inlineHelpText>
    <label>Exception Apex Class Snippet</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>