nebula-logger/core/main/log-management/objects/LogEntry__c/fields/ExceptionApexCodeSnippet__c.field-meta.xml
<CustomField>
    <fullName>ExceptionApexCodeSnippet__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>A JSON snippet of the Apex class&apos;s code that threw the exception</inlineHelpText>
    <label>Exception Apex Code Snippet</label>
    <!-- TODO finalize length needed -->
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>