nebula-logger/core/main/log-management/objects/LogEntry__c/fields/ExceptionSourceLineNumber__c.field-meta.xml
<CustomField>
    <fullName>ExceptionSourceLineNumber__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>The line number of the source code that generated the exception</inlineHelpText>
    <label>Exception Source Code Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>