nebula-logger/core/main/log-management/objects/LogEntry__c/fields/ExceptionSourceType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionSourceType__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Exception Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AnonymousBlock</fullName>
                <color>#333333</color>
                <label>AnonymousBlock</label>
            </value>
            <value>
                <fullName>ApexClass</fullName>
                <color>#A845DC</color>
                <label>ApexClass</label>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
                <color>#FFCC33</color>
                <label>ApexTrigger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>