nebula-logger/core/main/log-management/objects/LogEntry__c/fields/HasApexCodeSnippet__c.field-meta.xml
<CustomField>
    <fullName>HasApexCodeSnippet__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has Apex Code Snippet</label>
    <type>Checkbox</type>
</CustomField>