nebula-logger/core/main/log-management/objects/LogEntry__c/fields/HasExceptionApexCodeSnippet__c.field-meta.xml
<CustomField>
    <fullName>HasExceptionApexCodeSnippet__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Has Exception Apex Code Snippet</label>
    <type>Checkbox</type>
</CustomField>