nebula-logger/core/main/log-management/objects/LogEntry__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula
    >TEXT(OriginType__c) + IF(OR(ISPICKVAL(OriginSourceType__c, &apos;&apos;), ISPICKVAL(OriginSourceType__c, &apos;AnonymousBlock&apos;)), &apos;&apos;, &apos;.&apos; + TEXT(OriginSourceType__c)) + IF(OriginLocation__c == null, &apos;&apos;, &apos;.&apos; + OriginLocation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin</label>
    <type>Text</type>
</CustomField>