nebula-logger/core/main/log-management/objects/LogEntry__c/fields/OriginSourceLineNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceLineNumber__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>The line number of the source code that generated the log entry</inlineHelpText>
    <label>Origin Source Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>