nebula-logger/core/main/log-management/objects/LogEntry__c/fields/OriginSourceType__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceType__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Origin Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AnonymousBlock</fullName>
                <color>#333333</color>
                <label>AnonymousBlock</label>
            </value>
            <value>
                <fullName>Class</fullName>
                <color>#A845DC</color>
                <label>Class</label>
            </value>
            <value>
                <fullName>Trigger</fullName>
                <color>#FFCC33</color>
                <label>Trigger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>