nebula-logger/core/main/log-management/objects/LogEntry__c/listViews/AllExceptionLogEntries.listView-meta.xml
<ListView>
    <fullName>AllExceptionLogEntries</fullName>
    <columns>NAME</columns>
    <columns>Log__c</columns>
    <columns>LoggingLevelWithImage__c</columns>
    <columns>LoggedByUsernameLink__c</columns>
    <columns>OriginSourceType__c</columns>
    <columns>OriginSourceApiName__c</columns>
    <columns>Message__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>ExceptionSourceType__c</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExceptionType__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Exception Log Entries</label>
</ListView>